# Supply-Chain-Demand-Forecasting

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  extract_top_products.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes_forecast.py  routes_inventory.py  routes_meta.py  routes_reorder.py  routes_stockout.py  schemas.py
backend/app/core/: data.py  features.py
backend/app/ml/: backtest.py  forecaster.py  models.py  train.py
backend/app/services/: inventory.py  reorder.py  stockout.py
backend/artifacts/: feature_meta.json  metrics.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SeriesSelector.tsx  ui.tsx
frontend/src/pages/: Dashboard.tsx  Forecast.tsx  Inventory.tsx  Products.tsx  Reorder.tsx  StockOut.tsx
