[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.9.0",
    "torch>=2.4.0",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.2.0",
]

# Default to the CPU torch wheel for portable installs (Docker, CI). Locally you can
# still install the Intel XPU build with:
#   uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/xpu
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
